--- a/pages/filter.html
+++ b/pages/filter.html
@@ -15,15 +15,15 @@ permalink: /filter
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Include</div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00BFFF;">ग़</span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Design</span>
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00BFFF;">ग़</div>
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Design</div>
           </div>
         </div>
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">And</div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51;">ग़</span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Marketing</span>
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51;">ग़</div>
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Marketing</div>
           </div>
         </div>
       </div>
@@ -36,15 +36,15 @@ permalink: /filter
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Exclude</div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51;">ग़</span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">front-end</span>
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #f4ca16;">ग़</div>
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--field">front-end</div>
           </div>
         </div>
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Or</div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16;">ग़</span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #e30022;">ग़</div>
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</div>
           </div>
         </div>
       </div>
@@ -62,13 +62,13 @@ permalink: /filter
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Include</div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">next week (12/03/18-18/03/18)</span>
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--field">next week (12/03/18-18/03/18)</div>
           </div>
         </div>
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">And</div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">19/03/18-20/03/18</span>
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--field">19/03/18-20/03/18</div>
           </div>
         </div>
       </div>
@@ -81,13 +81,13 @@ permalink: /filter
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Exclude</div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">today</span>
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--field">today</div>
           </div>
         </div>
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Or</div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">18/03/18</span>
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--field">18/03/18</div>
           </div>
         </div>
       </div>
