--- a/pages/components.html
+++ b/pages/components.html
@@ -137,6 +137,19 @@ permalink: /components
     </div>
   </div>
 
+  <div class="pmx-field">
+    <div class="pmx-field__inner">
+      <div class="pmx-field__label">Assigned to</div>
+      <div class="pmx-field__value">
+
+        <div class="pmx-field__input">
+          <input type="text" class="pmx-field__inputEl">
+        </div>
+
+      </div>
+    </div>
+  </div>
+
 </div>
 
 
