added create new html + filter date example dates

--- a/pages/filter.html
+++ b/pages/filter.html
@@ -63,7 +63,7 @@ permalink: /filter
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Include</div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <div class="pmx-selector__blockPart pmx-selector__blockPart--field">next week (12/03/18-18/03/18)</div>
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--field">next 2 weeks (12/03/18-25/03/18)</div>
           </div>
         </div>
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">And</div>
