--- a/pages/tutorial.html
+++ b/pages/tutorial.html
@@ -42,15 +42,24 @@ permalink: /tutorial
 
                          <div style="margin: 40px 16%;width: auto;float: none;background-color: #F7F7F7;box-shadow: 0 10px 15px -10px #7e9bae;padding: 60px 80px;box-sizing:border-box;border-radius:3px;">
                            <img src="./assets/images/tf_logo_full.png" alt="logo" style="max-width: 30%;margin: 0 auto 60px;display: block;">
-                            <h1 style="color:#000;padding:0;font-size:22px;float:none;">Welcome to Contractor Managment, where you can manage qualification requests coming from contracting parties.</h1>
-                            <h5 style="text-transform:uppercase;font-weight:600;margin: 20px 0 10px 0;float: none;font-size:16px;">Manage your company information</h5>
-                            <p style="margin: 10px 0;font-size:16px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                            <p style="margin: 10px 0;font-size:16px;">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                            <h5 style="text-transform:uppercase;font-weight:600;margin: 20px 0 10px 0;float: none;font-size:16px;">Maintain you company's documents</h5>
-                            <p style="margin: 10px 0;font-size:16px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                            <p style="margin: 10px 0;font-size:16px;">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                            <h5 style="text-transform:uppercase;font-weight:600;margin: 20px 0 10px 0;float: none;font-size:16px;">Track all your requests</h5>
-                            <p style="margin: 10px 0;font-size:16px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            <h1 style="color:#000;padding:0;font-size:22px;float:none;">Contracting Party Tutorial</h1>
+                            <p style="margin: 10px 0;font-size:16px;">Welcome to Contractor Management, where you can manage the contractor qualification process for your company.</p>
+                            <h5 style="text-transform:uppercase;font-weight:600;margin: 20px 0 10px 0;float: none;font-size:16px;">Create templates to manage different types of qualification requests</h5>
+                            <p style="margin: 10px 0;font-size:16px;">Maintain the qualification templates for your contractor pre-qualification processes in ‘Contractor Qualification Templates’.</p>
+                            <p style="margin: 10px 0;font-size:16px;">Click ‘create new item’ to create a qualification template for a specific area of work. Open the qualification, where you can describe the work and later link the relevant documentation templates for each.</p>
+                            <h5 style="text-transform:uppercase;font-weight:600;margin: 20px 0 10px 0;float: none;font-size:16px;">Define which documents are required per template</h5>
+                            <p style="margin: 10px 0;font-size:16px;">‘Requested Documents (Templates)’ allows you to describe and manage all documentation templates needed from your contractors.</p>
+                            <p style="margin: 10px 0;font-size:16px;">Click ‘create new item’ to describe the type of document needed. When finished filling out the fields, click ‘create & open’. This navigates to the overview page where you can describe the requested document.</p>
+                            <p style="margin: 10px 0;font-size:16px;">These templates can then be linked to one or more contractor templates, so that contractors know which documents to provide for this request.</p>
+                            <h5 style="text-transform:uppercase;font-weight:600;margin: 20px 0 10px 0;float: none;font-size:16px;">Create a New Qualification Request</h5>
+                            <p style="margin: 10px 0;font-size:16px;">Once a qualification is described, you can begin sending requests to contractors in ‘Contractor Requests’.</p>
+                            <p style="margin: 10px 0;font-size:16px;">Click ‘create new item’ to describe a qualification request. Then click ‘create & open’ to navigate to the qualification and specify the work and documents needed. Click ‘send request’ to submit the request to a contractor, who will then begin working on your request.</p>
+                            <h5 style="text-transform:uppercase;font-weight:600;margin: 20px 0 10px 0;float: none;font-size:16px;">Follow-up on Existing Requests</h5>
+                            <p style="margin: 10px 0;font-size:16px;">Pending qualification requests can be monitored in ‘Pending Qualification Requests’, where you can accept or reject a contractor and follow up on the progress.</p>
+                            <p style="margin: 10px 0;font-size:16px;">Click on an item to review a contractor’s input and documents. Here you can accept a contractor or ask for additional information.</p>
+                            <h5 style="text-transform:uppercase;font-weight:600;margin: 20px 0 10px 0;float: none;font-size:16px;">Request Additional Info</h5>
+                            <p style="margin: 10px 0;font-size:16px;">At any time, you can also request extra information or documents from a contractor. Click on a qualification request to request more documents.</p>
+                            <h5 style="text-transform:uppercase;font-weight:600;margin: 20px 0 10px 0;float: none;font-size:16px;">For requests you already approved, first click ‘Re-activate request’ before adding a document. After updating the request, the contractor will be notified and begin working on it.</p>
                          </div>
 
                       </div>
