--- a/pages/tutorial.html
+++ b/pages/tutorial.html
@@ -59,7 +59,7 @@ permalink: /tutorial
                             <p style="margin: 10px 0;font-size:16px;">Click on an item to review a contractor’s input and documents. Here you can accept a contractor or ask for additional information.</p>
                             <h5 style="text-transform:uppercase;font-weight:600;margin: 20px 0 10px 0;float: none;font-size:16px;">Request Additional Info</h5>
                             <p style="margin: 10px 0;font-size:16px;">At any time, you can also request extra information or documents from a contractor. Click on a qualification request to request more documents.</p>
-                            <h5 style="text-transform:uppercase;font-weight:600;margin: 20px 0 10px 0;float: none;font-size:16px;">For requests you already approved, first click ‘Re-activate request’ before adding a document. After updating the request, the contractor will be notified and begin working on it.</p>
+                            <p style="margin: 10px 0;font-size:16px;">For requests you already approved, first click ‘Re-activate request’ before adding a document. After updating the request, the contractor will be notified and begin working on it.</p>
                          </div>
 
                       </div>
