--- a/pages/filter.html
+++ b/pages/filter.html
@@ -14,14 +14,14 @@ permalink: /filter
 
       <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly MULTISELECT__POPUP JS_selector" data-popid="#filter-tagpicker">
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Include</div>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+        <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00BFFF;">ग़</div>
             <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Design</div>
           </div>
         </div>
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">And</div>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+        <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51;">ग़</div>
             <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Marketing</div>
@@ -35,14 +35,14 @@ permalink: /filter
 
       <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly JS_selector">
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Exclude</div>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+        <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #f4ca16;">ग़</div>
             <div class="pmx-selector__blockPart pmx-selector__blockPart--field">front-end</div>
           </div>
         </div>
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Or</div>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+        <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #e30022;">ग़</div>
             <div class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</div>
@@ -61,13 +61,13 @@ permalink: /filter
 
       <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly MULTISELECT__POPUP JS_selector" data-popid="#filter-datepicker">
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Include</div>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+        <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <div class="pmx-selector__blockPart pmx-selector__blockPart--field">next 2 weeks (12/03/18-25/03/18)</div>
           </div>
         </div>
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">And</div>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+        <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <div class="pmx-selector__blockPart pmx-selector__blockPart--field">19/03/18-20/03/18</div>
           </div>
@@ -80,13 +80,13 @@ permalink: /filter
 
       <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly JS_selector">
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Exclude</div>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+        <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <div class="pmx-selector__blockPart pmx-selector__blockPart--field">today</div>
           </div>
         </div>
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Or</div>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+        <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
             <div class="pmx-selector__blockPart pmx-selector__blockPart--field">18/03/18</div>
           </div>
