Filter page: Added new filter example

--- a/pages/filter.html
+++ b/pages/filter.html
@@ -9,6 +9,37 @@ permalink: /filter
 
 <div class="pmx-field">
   <div class="pmx-field__inner">
+    <div class="pmx-field__label">Description</div>
+    <div class="pmx-field__value">
+
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly" >
+        <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Include</div>
+        <div class="pmx-selector__item ">
+          <div class="pmx-selector__block ">
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--field">improvement</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly JS_selector">
+        <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">And</div>
+      </div>
+
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly JS_selector">
+        <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Exclude</div>
+        <div class="pmx-selector__item">
+          <div class="pmx-selector__block ">
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--field">design</div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+<div class="pmx-field">
+  <div class="pmx-field__inner">
     <div class="pmx-field__label">Tags | Filter</div>
     <div class="pmx-field__value">
 
