Single select: fixed for new html, also brings prefix color with new selection

--- a/pages/components.html
+++ b/pages/components.html
@@ -193,8 +193,8 @@ permalink: /components
       <div class="pmx-selector MULTISELECT__POPUP JS_selector" data-popid="#multiSelector-1">
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #ff9b9b;">ध</div>
-            <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_pmx-selector__blockPart--label">Not started</div>
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_singleSelect--prefix" style="background-color: #ff9b9b;">ध</div>
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_singleSelect--label">Not started</div>
           </div>
         </div>
       </div>
