update pmx-selector class styles

--- a/pages/components.html
+++ b/pages/components.html
@@ -444,7 +444,7 @@ permalink: /components
         <input type="text" value="test" class="pmx-field__inputEl">
       </div>
 
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly JS_selector">
+      <div class="pmx-selector pmx-selector--readonly JS_selector">
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Include</div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
@@ -461,11 +461,11 @@ permalink: /components
         </div>
       </div>
 
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly JS_selector">
+      <div class="pmx-selector pmx-selector--readonly JS_selector">
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Or</div>
       </div>
 
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly JS_selector">
+      <div class="pmx-selector pmx-selector--readonly JS_selector">
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Exclude</div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
@@ -496,7 +496,7 @@ permalink: /components
         <input type="text" value="test" class="pmx-field__inputEl">
       </div>
 
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+      <div class="pmx-selector pmx-selector--readonly">
         <div class="pmx-selector__item">
           <div class="pmx-selector__block">
             <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51;">ބ</div>
