--- a/pages/filter.html
+++ b/pages/filter.html
@@ -12,7 +12,7 @@ permalink: /filter
     <div class="pmx-field__label">Description</div>
     <div class="pmx-field__value">
 
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly" >
+      <div class="pmx-selector pmx-selector--readonly" >
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Include</div>
         <div class="pmx-selector__item ">
           <div class="pmx-selector__block ">
@@ -21,11 +21,11 @@ permalink: /filter
         </div>
       </div>
 
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly JS_selector">
+      <div class="pmx-selector pmx-selector--readonly JS_selector">
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">And</div>
       </div>
 
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly JS_selector">
+      <div class="pmx-selector pmx-selector--readonly JS_selector">
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Exclude</div>
         <div class="pmx-selector__item">
           <div class="pmx-selector__block ">
@@ -43,7 +43,7 @@ permalink: /filter
     <div class="pmx-field__label">Tags | Filter</div>
     <div class="pmx-field__value">
 
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly MULTISELECT__POPUP JS_selector" data-popid="#filter-tagpicker">
+      <div class="pmx-selector pmx-selector--readonly MULTISELECT__POPUP JS_selector" data-popid="#filter-tagpicker">
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Include</div>
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
@@ -60,7 +60,7 @@ permalink: /filter
         </div>
       </div>
 
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly JS_selector">
+      <div class="pmx-selector pmx-selector--readonly JS_selector">
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Or</div>
       </div>
 
@@ -90,7 +90,7 @@ permalink: /filter
     <div class="pmx-field__label">Date | Filter</div>
     <div class="pmx-field__value">
 
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly MULTISELECT__POPUP JS_selector" data-popid="#filter-datepicker">
+      <div class="pmx-selector pmx-selector--readonly MULTISELECT__POPUP JS_selector" data-popid="#filter-datepicker">
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Include</div>
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
@@ -105,11 +105,11 @@ permalink: /filter
         </div>
       </div>
 
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly JS_selector">
+      <div class="pmx-selector pmx-selector--readonly JS_selector">
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Or</div>
       </div>
 
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly JS_selector">
+      <div class="pmx-selector pmx-selector--readonly JS_selector">
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Exclude</div>
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
