Class updates in popups: we should never use --expanded and --readonly on the same selector now

--- a/pages/filter.html
+++ b/pages/filter.html
@@ -64,7 +64,7 @@ permalink: /filter
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Or</div>
       </div>
 
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly JS_selector">
+      <div class="pmx-selector pmx-selector--readonly JS_selector">
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Exclude</div>
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
