fix aligment selectors in tab2

--- a/pages/components.html
+++ b/pages/components.html
@@ -116,8 +116,12 @@ permalink: /components
       <div class="pmx-field__label">Assigned to</div>
       <div class="pmx-field__value">
 
-        <div class="pmx-field__input">
-          <input type="text" value="Nick De Jaeger" class="pmx-field__inputEl">
+        <div class="pmx-selector JS_selector">
+          <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+            <div class="pmx-selector__block ">
+              <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Nick de Jaeger</div>
+            </div>
+          </div>
         </div>
 
       </div>
