--- a/pages/pmx.html
+++ b/pages/pmx.html
@@ -19,6 +19,9 @@ permalink: /pmx
     <header class="app-header cf">
       {% include blocks/app-header.html %}
     </header>
+
+    {% include blocks/breadcrumbs.html %}
+
     {% include blocks/old-pmx-tabline.html %}
     {% include blocks/old-pmx-listtool.html %}
     {% include blocks/old-pmx-table.html %}
