--- a/pages/components.html
+++ b/pages/components.html
@@ -442,7 +442,7 @@ permalink: /components
 
 <div class="pmx-field">
   <div class="pmx-field__inner">
-    <div class="pmx-field__value">
+    <div class="pmx-field__value pmx-field__value--overflow">
 
       <div class="pmx-field__input pmx-field__input--hidden">
         <input type="text" value="test" class="pmx-field__inputEl">
@@ -532,8 +532,6 @@ permalink: /components
   /*****************************************************/
 
   pmxFieldEmpty();
-  pmxFieldFocus();
-  pmxFieldFocusOut();
 
   $('.pmx-field__inputEl').on('keyup focus focusout', function() {
     pmxFieldEmpty();
@@ -553,28 +551,6 @@ permalink: /components
           _parent.removeClass('pmx-field--empty');
         }
       }
-    });
-  }
-
-  function pmxFieldFocus() {
-    $('.pmx-field__inputEl').each(function() {
-      var _this = $(this);
-      var _parent = $(this).parent().parent().parent().parent();
-
-      _this.on('focus', function() {
-        _parent.addClass('pmx-field--focus');
-      });
-    });
-  }
-
-  function pmxFieldFocusOut() {
-    $('.pmx-field__inputEl').each(function() {
-      var _this = $(this);
-      var _parent = $(this).parent().parent().parent().parent();
-
-      _this.on('focusout', function() {
-        _parent.removeClass('pmx-field--focus');
-      });
     });
   }
 
