update item header

--- a/pages/pmx-item-detail.html
+++ b/pages/pmx-item-detail.html
@@ -20,7 +20,7 @@ permalink: /pmx-detail
       {% include blocks/app-header.html %}
     </header>
 
-    {% include blocks/old-pmx-tabline.html %}
+    {% include blocks/breadcrumbs.html %}
 
     {% include blocks/old-pmx-item-detail.html %}
   </main>
