add framework file

--- a/pages/pmx-item-detail.html
+++ b/pages/pmx-item-detail.html
@@ -20,8 +20,11 @@ permalink: /pmx-detail
       {% include blocks/app-header.html %}
     </header>
 
-    {% include blocks/breadcrumbs.html %}
+    {% include blocks/old-pmx-tabline.html %}
 
-    {% include blocks/old-pmx-item-detail.html %}
+    <div style="background-color: #4692C3;padding: 10px 0;">
+      {% include blocks/breadcrumbs.html %}
+      {% include blocks/old-pmx-item-detail.html %}
+    </div>
   </main>
 </div>
