update tooltip/error messages on components page

--- a/pages/components.html
+++ b/pages/components.html
@@ -178,10 +178,12 @@ permalink: /components
       </div>
 
     </div>
-    <div class="pmx-field__note">
-      <p>Lorem ipsum dolor sit amet, <a href="#">consectetur adipisicing elit</a>, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+    <div class="pmx-note">
+      <p>Actual invoice amount</p>
+      <p>For fixed price projects and service requests (no <a href="#">timesheets</a>): when you change the status to 'to be invoiced', please insert the exact amount that needs to be invoiced.</p>
     </div>
+    
   </div>
 </div>
 
