--- a/pages/components.html
+++ b/pages/components.html
@@ -183,11 +183,11 @@ permalink: /components
       <p>Actual invoice amount</p>
       <p>For fixed price projects and service requests (no <a href="#">timesheets</a>): when you change the status to 'to be invoiced', please insert the exact amount that needs to be invoiced.</p>
     </div>
-    
+
   </div>
 </div>
 
-<div class="pmx-field">
+<div class="pmx-field pmx-field--error">
   <div class="pmx-field__inner">
     <div class="pmx-field__label">Status</div>
     <div class="pmx-field__value">
