--- a/pages/font.html
+++ b/pages/font.html
@@ -52,7 +52,6 @@ permalink: /font
   .w700 {
     font-weight: 700;
   }
-
   .highlight {
     border-left: 2px solid #cccc63;
     border-right: 2px solid #cccc63;
@@ -79,40 +78,40 @@ permalink: /font
   <tbody>
     <tr>
       <td class="label">Regular</td>
-      <td class="ff-ssp regular">ܒ TenForce क<br>我要約<br>Энэ хэрхэн харагддаг<br>ဘယ်လိုဒီကိုကြည့်ပါဘ</td>
-      <td class="ff-ssp-ar regular">ܒ TenForce क<br>我要約<br>Энэ хэрхэн харагддаг<br>ဘယ်လိုဒီကိုကြည့်ပါဘ</td>
-      <td class="ff-ssp-tf regular highlight">ܒ TenForce क<br>我要約<br>Энэ хэрхэн харагддаг<br>ဘယ်လိုဒီကိုကြည့်ပါဘ</td>
-      <td class="ff-tf-ssp regular">ܒ TenForce क<br>我要約<br>Энэ хэрхэн харагддаг<br>ဘယ်လိုဒီကိုကြည့်ပါဘ</td>
+      <td class="ff-ssp regular">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-ssp-ar regular">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-ssp-tf regular highlight">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-tf-ssp regular">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
     </tr>
     <tr>
       <td class="label">Bold</td>
-      <td class="ff-ssp bold">ܒ TenForce क<br>我要約<br>Энэ хэрхэн харагддаг<br>ဘယ်လိုဒီကိုကြည့်ပါဘ</td>
-      <td class="ff-ssp-ar bold">ܒ TenForce क<br>我要約<br>Энэ хэрхэн харагддаг<br>ဘယ်လိုဒီကိုကြည့်ပါဘ</td>
-      <td class="ff-ssp-tf bold highlight">ܒ TenForce क<br>我要約<br>Энэ хэрхэн харагддаг<br>ဘယ်လိုဒီကိုကြည့်ပါဘ</td>
-      <td class="ff-tf-ssp bold">ܒ TenForce क<br>我要約<br>Энэ хэрхэн харагддаг<br>ဘယ်လိုဒီကိုကြည့်ပါဘ</td>
+      <td class="ff-ssp bold">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-ssp-ar bold">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-ssp-tf bold highlight">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-tf-ssp bold">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
     </tr>
     <!--
     <tr>
       <td class="label">italic</td>
-      <td class="ff-ssp italic">ܒ TenForce क<br>我要約<br>Энэ хэрхэн харагддаг<br>ဘယ်လိုဒီကိုကြည့်ပါဘ</td>
-      <td class="ff-ssp-ar italic">ܒ TenForce क<br>我要約<br>Энэ хэрхэн харагддаг<br>ဘယ်လိုဒီကိုကြည့်ပါဘ</td>
-      <td class="ff-ssp-tf italic highlight">ܒ TenForce क<br>我要約<br>Энэ хэрхэн харагддаг<br>ဘယ်လိုဒီကိုကြည့်ပါဘ</td>
-      <td class="ff-tf-ssp italic">ܒ TenForce क<br>我要約<br>Энэ хэрхэн харагддаг<br>ဘယ်လိုဒီကိုကြည့်ပါဘ</td>
+      <td class="ff-ssp italic">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-ssp-ar italic">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-ssp-tf italic highlight">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-tf-ssp italic">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
     </tr>
     -->
     <tr>
       <td class="label">600</td>
-      <td class="ff-ssp w600">ܒ TenForce क<br>我要約<br>Энэ хэрхэн харагддаг<br>ဘယ်လိုဒီကိုကြည့်ပါဘ</td>
-      <td class="ff-ssp-ar w600">ܒ TenForce क<br>我要約<br>Энэ хэрхэн харагддаг<br>ဘယ်လိုဒီကိုကြည့်ပါဘ</td>
-      <td class="ff-ssp-tf w600 highlight">ܒ TenForce क<br>我要約<br>Энэ хэрхэн харагддаг<br>ဘယ်လိုဒီကိုကြည့်ပါဘ</td>
-      <td class="ff-tf-ssp w600">ܒ TenForce क<br>我要約<br>Энэ хэрхэн харагддаг<br>ဘယ်လိုဒီကိုကြည့်ပါဘ</td>
+      <td class="ff-ssp w600">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-ssp-ar w600">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-ssp-tf w600 highlight">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-tf-ssp w600">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
     </tr>
     <tr>
       <td class="last label">700</td>
-      <td class="last ff-ssp w700">ܒ TenForce क<br>我要約<br>Энэ хэрхэн харагддаг<br>ဘယ်လိုဒီကိုကြည့်ပါဘ</td>
-      <td class="last ff-ssp-ar w700">ܒ TenForce क<br>我要約<br>Энэ хэрхэн харагддаг<br>ဘယ်လိုဒီကိုကြည့်ပါဘ</td>
-      <td class="last ff-ssp-tf w700 highlight">ܒ TenForce क<br>我要約<br>Энэ хэрхэн харагддаг<br>ဘယ်လိုဒီကိုကြည့်ပါဘ</td>
-      <td class="last ff-tf-ssp w700">ܒ TenForce क<br>我要約<br>Энэ хэрхэн харагддаг<br>ဘယ်လိုဒီကိုကြည့်ပါဘ</td>
+      <td class="last ff-ssp w700">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="last ff-ssp-ar w700">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="last ff-ssp-tf w700 highlight">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="last ff-tf-ssp w700">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
     </tr>
   </tbody>
 </table>
