update font page

--- a/pages/font.html
+++ b/pages/font.html
@@ -8,12 +8,15 @@ permalink: /font
   table {
     width: 100%;
   }
+  table tr {
+    border-bottom: 1px solid #F4F4F4;
+  }
   table td {
     padding: 30px;
     vertical-align: text-top;
   }
   table thead td {
-    background-color: #f4f4f4;
+    background-color: #F4F4F4;
     padding: 20px 30px;
   }
   .label {
@@ -22,7 +25,7 @@ permalink: /font
     font-weight: bold;
     letter-spacing: 1px;
     color: #838383;
-    background-color: #f4f4f4;
+    background-color: #F4F4F4;
   }
   .ff-ssp {
     font-family: 'Source Sans Pro', sans-serif;
@@ -56,15 +59,15 @@ permalink: /font
     font-weight: 700;
   }
   .highlight {
-    border-left: 2px solid #cccc63;
-    border-right: 2px solid #cccc63;
+    border-left: 2px solid #CCCC63;
+    border-right: 2px solid #CCCC63;
   }
   .label.highlight {
-    border: 2px solid #cccc63;
+    border: 2px solid #CCCC63;
     border-bottom: 0;
   }
   .last.highlight {
-    border-bottom: 2px solid #cccc63;
+    border-bottom: 2px solid #CCCC63;
   }
 </style>
 
